# bwa-rust

./: .gitmodules  Cargo.toml  bindgen.sh
bwa/: Cargo.toml
bwa-sys/: Cargo.toml  bindgen.sh  build.rs  wrapper.c
bwa-sys/src/: lib.rs
bwa/src/: lib.rs
