[package]
name = "bwa-sys"
version = "0.1.0"
edition = "2021"
license-file = "ext/bwa/COPYING"
build = "build.rs"
links = "bwa"
description = "Build script for compiling bwa C library from source."
categories = ["ffi"]

[dependencies]
libc = "*"

[build-dependencies]
cc = { version = "*", features = ["parallel"] }