[package]
name = "bwa"
version = "0.1.0"
edition = "2021"
authors = ["Kai Zhang <zhangkai33@westlake.edu.cn>"]
license = "MIT"

[dependencies]
libc = "*"
bstr = "1.0"
bwa-sys = { version = "0.1", workspace = true }
noodles = { version = "0.80", features = ["core", "fastq", "bam", "sam"] }
itertools = "0.13"

[dev-dependencies]
flate2 = "1.0"